--- a/index.html
+++ b/index.html
@@ -5,41 +5,138 @@
 <title>Movie ID Finder</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
+:root {
+  --bg-color: #121212;
+  --text-color: #ffffff;
+  --card-bg: rgba(30,30,30,0.85);
+  --tmdb-color: #1da1f2;
+  --imdb-color: #f1c40f;
+  --badge-bg: rgba(42,42,42,0.8);
+}
+
 body {
-  font-family: 'Segoe UI', sans-serif;
-  margin:0; padding:0;
-  background:#121212 url("https://raw.githubusercontent.com/Murdervan/movie-id-finder/main/image/movie-ID-finder-logo.png") center/cover no-repeat fixed;
-  color:#fff;
-  display:flex; flex-direction:column; min-height:100vh;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0; padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  color: var(--text-color);
 }
+
 body::before {
-  content:""; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.6); z-index:-1;
+  content: "";
+  position: fixed; top:0; left:0;
+  width:100%; height:100%;
+  background-image: url("https://raw.githubusercontent.com/Murdervan/movie-id-finder/main/image/movie-ID-finder-logo.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+  opacity: 0.6;
 }
-main { flex:1; display:flex; flex-direction:column; align-items:center; padding:80px 20px 30px; max-width:800px; margin:auto; width:100%; }
-.title-container { text-align:center; margin-bottom:30px; }
-.title-container h1 { font-size:60px; background:linear-gradient(90deg,#1da1f2,#f1c40f); -webkit-background-clip:text; -webkit-text-fill-color:transparent; text-shadow:2px 2px 8px rgba(0,0,0,0.7); margin:0; }
-.subtitle { font-size:18px; color:#ccc; margin-top:10px; }
-input { width:100%; max-width:500px; padding:12px; font-size:16px; border-radius:8px; border:none; margin-bottom:20px; background:rgba(30,30,30,0.85); color:#fff; }
-input:focus { outline:2px solid #1da1f2; }
-#results { width:100%; display:flex; flex-direction:column; gap:20px; }
-.movie { display:flex; gap:20px; align-items:flex-start; background:rgba(30,30,30,0.85); padding:15px; border-radius:12px; transition:0.2s; }
-.movie:hover { transform:translateY(-2px); box-shadow:0 4px 15px rgba(0,0,0,0.4); }
+
+main {
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 20px 30px 20px;
+  width: 100%;
+  max-width: 800px;
+  box-sizing: border-box;
+}
+
+.title-container {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.title-container h1 {
+  font-size: 60px; font-weight: bold;
+  margin:0;
+  background: linear-gradient(90deg, #1da1f2, #f1c40f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+}
+
+.subtitle {
+  font-size: 18px;
+  color: #ccc;
+  margin-top: 10px;
+}
+
+input {
+  width: 100%; max-width: 500px;
+  padding: 12px 15px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 20px;
+  background-color: var(--card-bg);
+  color: var(--text-color);
+}
+input:focus { outline: 2px solid var(--tmdb-color); }
+
+#results {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-height: 50px;
+}
+
+.movie {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+  background-color: var(--card-bg);
+  padding: 15px;
+  border-radius: 12px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+.movie:hover { transform: translateY(-2px); box-shadow: 0 4px 15px rgba(0,0,0,0.4); }
+
 .movie img { width:100px; border-radius:8px; flex-shrink:0; }
+
 .movie-info { display:flex; flex-direction:column; gap:8px; flex-grow:1; }
-.movie-info b { font-size:20px; color:#1da1f2; }
+.movie-info b { font-size: 20px; color: var(--tmdb-color); }
 .movie-info p { font-size:14px; color:#ccc; margin:4px 0; }
+
 .badges { display:flex; gap:6px; flex-wrap:wrap; }
-.badge { background:rgba(42,42,42,0.8); padding:2px 6px; border-radius:6px; font-size:12px; }
-.id-box { display:flex; justify-content:space-between; align-items:center; background:rgba(42,42,42,0.8); padding:8px 12px; border-radius:8px; font-size:14px; border:2px solid transparent; gap:10px; }
-.id-box a { color:#fff; text-decoration:none; font-weight:bold; }
-.tmdb { border-color:#1da1f2; } .imdb { border-color:#f1c40f; }
-.copy-btn { background:#1da1f2; border:none; border-radius:4px; color:#fff; padding:2px 6px; font-size:12px; cursor:pointer; }
-.copy-btn:hover { background:#0d8ddb; } .copy-btn.copied { background:#2ecc71 !important; }
-footer { display:flex; flex-direction:column; align-items:center; gap:5px; width:100%; background:rgba(30,30,30,0.85); padding:15px 0; border-top:2px solid #333; font-size:14px; }
-footer a { color:#1da1f2; text-decoration:none; font-weight:bold; }
-footer a:hover { color:#0d8ddb; text-decoration:underline; }
-#topBtn { display:none; position:fixed; bottom:20px; right:20px; z-index:99; font-size:18px; border:none; outline:none; background:#1da1f2; color:white; cursor:pointer; padding:10px 15px; border-radius:50%; box-shadow:0 2px 6px rgba(0,0,0,0.5); }
-#topBtn:hover { background:#0d8ddb; }
+.badge { background-color: var(--badge-bg); padding:2px 6px; border-radius:6px; font-size:12px; color: var(--text-color); }
+
+.id-box { display:flex; justify-content:space-between; align-items:center; background-color: var(--badge-bg); padding:8px 12px; border-radius:8px; font-size:14px; gap:10px; border:2px solid transparent; }
+.id-box a { color: var(--text-color); text-decoration:none; font-weight:bold; }
+.tmdb { border-color: var(--tmdb-color); } .imdb { border-color: var(--imdb-color); }
+
+.copy-btn { background-color: var(--tmdb-color); border:none; border-radius:4px; color:#fff; padding:2px 6px; font-size:12px; cursor:pointer; transition: background-color 0.2s; }
+.copy-btn:hover { background-color: #0d8ddb; }
+.copy-btn.copied { background-color: #2ecc71 !important; }
+
+footer {
+  display:flex; flex-direction:column; align-items:center; gap:5px;
+  width:100%;
+  background-color: var(--card-bg);
+  padding:15px 0;
+  border-top:2px solid #333;
+  font-size:14px;
+}
+
+footer a { color: var(--tmdb-color); text-decoration:none; font-weight:bold; }
+footer a:hover { text-decoration:underline; color:#0d8ddb; }
+
+#topBtn {
+  display:none; position:fixed; bottom:20px; right:20px;
+  z-index:99;
+  font-size:18px; border:none; outline:none;
+  background-color: var(--tmdb-color);
+  color:white; cursor:pointer;
+  padding:10px 15px; border-radius:50%;
+  box-shadow:0 2px 6px rgba(0,0,0,0.5);
+  transition: background-color 0.3s;
+}
+#topBtn:hover { background-color:#0d8ddb; }
 </style>
 </head>
 <body>
@@ -66,18 +163,19 @@ const q=document.getElementById("q");
 const results=document.getElementById("results");
 const topBtn=document.getElementById("topBtn");
 
-// Copy ID
+
 function copyToClipboard(id, btn){
   navigator.clipboard.writeText(id);
-  btn.textContent="Copied!"; btn.classList.add("copied");
+  btn.textContent="Copied!";
+  btn.classList.add("copied");
   setTimeout(()=>{btn.textContent="Copy"; btn.classList.remove("copied");},1500);
 }
 
-// Scroll top
+
 window.onscroll=()=>{ topBtn.style.display=(document.body.scrollTop>100||document.documentElement.scrollTop>100)?"block":"none"; }
 function topFunction(){ document.body.scrollTop=0; document.documentElement.scrollTop=0; }
 
-// Search function
+
 async function searchMovies(){
   results.innerHTML="";
   if(q.value.length<2) return;
@@ -111,7 +209,6 @@ async function searchMovies(){
   }
 }
 
-// Events
 q.addEventListener("input", searchMovies);
 q.addEventListener("keypress", e=>{ if(e.key==="Enter") searchMovies(); });
 </script>
