--- a/index.html
+++ b/index.html
@@ -183,64 +183,106 @@ const q = document.getElementById("q");
 const results = document.getElementById("results");
 const topBtn = document.getElementById("topBtn");
 
-
 // Copy ID
 function copyToClipboard(id, button) {
   navigator.clipboard.writeText(id);
   button.textContent = "Copied!";
   button.classList.add("copied");
-  setTimeout(() => { button.textContent = "Copy"; button.classList.remove("copied"); }, 1500);
+  setTimeout(() => {
+    button.textContent = "Copy";
+    button.classList.remove("copied");
+  }, 1500);
 }
 
 // Scroll-to-top button
-window.onscroll = function() { scrollFunction(); };
-function scrollFunction() {
-  if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-    topBtn.style.display = "block";
-  } else {
-    topBtn.style.display = "none";
-  }
-}
+window.onscroll = () => {
+  topBtn.style.display =
+    document.documentElement.scrollTop > 100 ? "block" : "none";
+};
 function topFunction() {
-  document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 }
 
-// Search movies
+// Search movies + TV
 q.addEventListener("input", async () => {
   results.innerHTML = "";
-  if(q.value.length < 2) return;
+  if (q.value.length < 2) return;
 
-  const res = await fetch(`https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${encodeURIComponent(q.value)}`);
-  const data = await res.json();
+  const query = encodeURIComponent(q.value);
 
-  for(const m of data.results){
-    const d = await fetch(`https://api.themoviedb.org/3/movie/${m.id}?api_key=${API_KEY}`).then(r => r.json());
-    const poster = d.poster_path ? `https://image.tmdb.org/t/p/w200${d.poster_path}` : "https://via.placeholder.com/100x150?text=No+Image";
-    const tmdbLink = `https://www.themoviedb.org/movie/${d.id}`;
+  const [movieRes, tvRes] = await Promise.all([
+    fetch(`https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${query}`).then(r => r.json()),
+    fetch(`https://api.themoviedb.org/3/search/tv?api_key=${API_KEY}&query=${query}`).then(r => r.json())
+  ]);
 
-    // Fjern "tt" fra IMDb ID
-    const imdbIdNum = d.imdb_id ? d.imdb_id.replace(/^tt/, '') : null;
-    const imdbLink = imdbIdNum ? `https://www.imdb.com/title/tt${imdbIdNum}/` : "#";
+  const combined = [
+    ...movieRes.results.map(r => ({ ...r, media_type: "movie" })),
+    ...tvRes.results.map(r => ({ ...r, media_type: "tv" }))
+  ];
 
-    const genreBadges = d.genres?.map(g => `<span class="badge">${g.name}</span>`).join("") || "";
+  for (const item of combined) {
+    const detailUrl =
+      item.media_type === "movie"
+        ? `https://api.themoviedb.org/3/movie/${item.id}?api_key=${API_KEY}`
+        : `https://api.themoviedb.org/3/tv/${item.id}?api_key=${API_KEY}`;
+
+    const d = await fetch(detailUrl).then(r => r.json());
+
+    const title = d.title || d.name;
+    const year = (d.release_date || d.first_air_date || "").slice(0, 4) || "N/A";
+    const poster = d.poster_path
+      ? `https://image.tmdb.org/t/p/w200${d.poster_path}`
+      : "https://via.placeholder.com/100x150?text=No+Image";
+
+    const tmdbLink =
+      item.media_type === "movie"
+        ? `https://www.themoviedb.org/movie/${d.id}`
+        : `https://www.themoviedb.org/tv/${d.id}`;
+
+    const imdbIdNum = d.imdb_id ? d.imdb_id.replace(/^tt/, "") : null;
+    const imdbLink = imdbIdNum
+      ? `https://www.imdb.com/title/tt${imdbIdNum}/`
+      : "#";
+
+    const tvdbSearch = `https://www.thetvdb.com/search?query=${encodeURIComponent(title)}`;
+    const tvdbSeries = `https://www.thetvdb.com/series/${encodeURIComponent(
+      title.toLowerCase().replace(/[^a-z0-9]+/g, "-")
+    )}`;
+
+    const genreBadges =
+      d.genres?.map(g => `<span class="badge">${g.name}</span>`).join("") || "";
 
     results.innerHTML += `
       <div class="movie">
-        <img src="${poster}" alt="${d.title}" loading="lazy">
+        <img src="${poster}" alt="${title}" loading="lazy">
         <div class="movie-info">
-          <b>${d.title} (${d.release_date ? d.release_date.slice(0,4) : "N/A"})</b>
+          <b>${title} (${year}) ${item.media_type === "tv" ? "📺" : "🎬"}</b>
           <div class="badges">${genreBadges}</div>
           <p>⭐ Rating: ${d.vote_average || "N/A"} | Votes: ${d.vote_count || 0}</p>
           <p>${d.overview?.slice(0,150) || "No description"}${d.overview?.length > 150 ? "..." : ""}</p>
+
           <div class="id-box tmdb">
             <a href="${tmdbLink}" target="_blank">TMDb ID: ${d.id}</a>
             <button class="copy-btn" onclick="copyToClipboard('${d.id}', this)">Copy</button>
           </div>
-          ${imdbIdNum ? `<div class="id-box imdb">
-            <a href="${imdbLink}" target="_blank">IMDb ID: ${imdbIdNum}</a>
-            <button class="copy-btn" onclick="copyToClipboard('${imdbIdNum}', this)">Copy</button>
-          </div>` : ''}
+
+          ${
+            imdbIdNum
+              ? `<div class="id-box imdb">
+                  <a href="${imdbLink}" target="_blank">IMDb ID: ${imdbIdNum}</a>
+                  <button class="copy-btn" onclick="copyToClipboard('${imdbIdNum}', this)">Copy</button>
+                </div>`
+              : ""
+          }
+
+          ${
+            item.media_type === "tv"
+              ? `<div class="id-box tvdb">
+                  <a href="${tvdbSeries}" target="_blank">TheTVDB Series Page</a>
+                  <a href="${tvdbSearch}" target="_blank">Search</a>
+                </div>`
+              : ""
+          }
         </div>
       </div>
     `;
