Refactor TVDB ID display in index.html

--- a/index.html
+++ b/index.html
@@ -302,11 +302,7 @@ q.addEventListener("input", async () => {
           ${
   item.media_type === "tv"
     ? `<div class="id-box tvdb">
-        <span><b>TheTVDB ID Page</b></span>
-        <a class="open-btn" href="${tvdbSeries}" target="_blank">OPEN</a>
-      </div>
-      <div class="id-box tvdb">
-        <span>TheTVDB Search</span>
+        <span>TheTVDB ID Page</span>
         <a class="open-btn" href="${tvdbSearch}" target="_blank">OPEN</a>
       </div>`
     : ""
