--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
 </p>
   </div>
 
-  <input id="q" placeholder="Search for a movie">
+  <input id="q" placeholder="Search for a movie or TV series">
   <div id="results"></div>
 </main>
 
