--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ q.addEventListener("input", async () => {
           ${
   item.media_type === "tv"
     ? `<div class="id-box tvdb">
-        <span>TVDB ID Page</span>
+        <span>TVDb ID Page</span>
         <a class="open-btn" href="${tvdbSearch}" target="_blank">OPEN</a>
       </div>`
     : ""
