--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@ main {
   margin-top: 2px;
 }
 
+.poster-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+}
+
 .poster-emoji {
-  text-align: center;
-  font-size: 20px;
-  margin-top: 4px;
+  font-size: 24px;      
+  margin-top: 6px;      
+  line-height: 1;
 }
   
 input {
@@ -283,11 +290,14 @@ q.addEventListener("input", async () => {
       d.genres?.map(g => `<span class="badge">${g.name}</span>`).join("") || "";
 
     results.innerHTML += `
-      <div class="movie">
-        <img src="${poster}" alt="${title}" loading="lazy">
-        <div class="poster-emoji">
+  <div class="movie">
+
+    <div class="poster-wrap">
+      <img src="${poster}" alt="${title}" loading="lazy">
+      <div class="poster-emoji">
         ${item.media_type === "tv" ? "📺" : "🎬"}
-        </div>
+      </div>
+    </div>
 
 
         <div class="movie-info">
