--- a/index.html
+++ b/index.html
@@ -110,14 +110,12 @@ main {
 }
 
 .poster-type {
-  font-weight: bold;
-  font-size: 18px;
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-  color: white;
-  text-shadow: 1px 1px 2px black;
-}
+  font-size: 15px;
+  opacity: 0.75;
+  margin-top: 5px;
+  line-height: 1;
+  white-space: nowrap;
+
   
 input {
   width: 100%; max-width: 500px;
