--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   flex-shrink: 0;
 }
 
@@ -114,7 +115,10 @@ main {
   opacity: 0.75;
   margin-top: 12px;
   line-height: 1;
-  white-space: nowrap;
+  white-space: normal;
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 2px black;
 }
   
 input {
