--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@ footer p { margin: 0; color: var(--text-color); font-size: 14px; text-align: cen
 footer a { margin: 0; color: var(--tmdb-color); font-size: 14px; text-decoration: none; font-weight: bold; }
 footer a:hover { text-decoration: underline; color: #0d8ddb; }
 
-/* Go to Top Button */
 #topBtn {
   display: none;
   position: fixed; bottom: 20px; right: 20px;
@@ -242,7 +241,6 @@ const q = document.getElementById("q");
 const results = document.getElementById("results");
 const topBtn = document.getElementById("topBtn");
 
-// Copy ID
 function copyToClipboard(id, button) {
   navigator.clipboard.writeText(id);
   button.textContent = "Copied!";
@@ -253,30 +251,22 @@ function copyToClipboard(id, button) {
   }, 1500);
 }
 
-// Scroll-to-top button
 window.onscroll = () => {
-  topBtn.style.display =
-    document.documentElement.scrollTop > 100 ? "block" : "none";
+  topBtn.style.display = document.documentElement.scrollTop > 100 ? "block" : "none";
 };
-function topFunction() {
-  document.documentElement.scrollTop = 0;
-}
+function topFunction() { document.documentElement.scrollTop = 0; }
 
 let searchTimeout = null;
-let lastQuery = "";
 
-// Search movies + TV
+// Stable Search (debounced, no buggy lastQuery)
 q.addEventListener("input", () => {
   clearTimeout(searchTimeout);
 
   searchTimeout = setTimeout(async () => {
     results.innerHTML = "";
 
-    // "Smart" query: fjern ekstra mellemrum
     let queryText = q.value.replace(/\s+/g, " ").trim();
     if (queryText.length < 2) return;
-    if (queryText === lastQuery) return;
-    lastQuery = queryText;
 
     const query = encodeURIComponent(queryText);
 
@@ -371,10 +361,9 @@ q.addEventListener("input", () => {
       console.error("Error fetching search results:", err);
     }
 
-  }, 300); // 300ms debounce
+  }, 300);
 });
 </script>
-
 
 </body>
 </html>
