--- a/index.html
+++ b/index.html
@@ -245,18 +245,27 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
   </p>
   </div>
 
- <a
+  <a
     href="https://raw.githubusercontent.com/Murdervan/nordicq-movie-id-autofill/main/nordicq-autofill.user.js"
     class="install-btn subtle"
     target="_blank"
   >
-  🎬 Install Auto-Fill
+    🎬 Install Auto-Fill
   </a>
 
   <div id="tm-note" style="display:none; margin-top:4px; font-size:12px; color:#ccc; text-align:center;">
     ⚠️ Requires <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a>
   </div>
 </div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    if (!window.GM_info) {
+      const tmNote = document.getElementById('tm-note');
+      if (tmNote) tmNote.style.display = 'block';
+    }
+  });
+</script>
   
   <input id="q" placeholder="Search for a movie or TV series">
   <div id="results"></div>
