--- a/index.html
+++ b/index.html
@@ -251,12 +251,11 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
     target="_blank"
   >
     🎬 Install Auto-Fill
-  </a>
-
-  <div id="tm-note" style="display:none; margin-top:4px; font-size:12px; color:#ccc; text-align:center;">
+  </a><div id="tm-note" style="display:none; margin-top:4px; font-size:12px; color:#ccc; text-align:center;">
     ⚠️ Requires <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a>
   </div>
 </div>
+  
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
@@ -266,6 +265,8 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
     }
   });
 </script>
+
+  
   
   <input id="q" placeholder="Search for a movie or TV series">
   <div id="results"></div>
