--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
     target="_blank"
   >
     🎬 Install Auto-Fill
-  </a><div id="tm-note" style="display:none; margin-top:4px; font-size:12px; color:#ccc; text-align:center;">
+  </a>
+  
+  <div id="tm-note" style="display:none; margin-top:20px; font-size:12px; color:#ccc; text-align:center;">
     ⚠️ Requires <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a>
   </div>
 </div>
