--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@ main {
 
 .tm-note {
   display: none;
-  margin-top: 1px;        
+  margin-top: 4px;        
   font-size: 12px;
   color: #ccc;
   text-align: center;
+  line-height: 0.8;
 }
   
 input {
