--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ main {
   margin-top: 4px;
   margin-bottom: 16px;
   font-size: 13px;
-  color: #333;
-  background-color: #fff3cd; 
-  border: 1px solid #ffeeba;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255,255,255,0.2);
   border-radius: 6px;
   padding: 6px 10px;
   text-align: center;
