--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@ main {
   font-weight: 500;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
+
+.tm-link {
+  color: #1da1f2;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
   
 input {
   width: 100%; max-width: 500px;
@@ -270,8 +277,8 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
     </a>
 
     <div id="tm-note">
-      ⚠️ Requires <a href="https://www.tampermonkey.net/" target="_blank">Tampermonkey</a>
-    </div>
+  ⚠️ Requires <span class="tm-link">Tampermonkey</span>
+</div>
   </div>
 
 <script>
