--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
       🎬 Install Auto-Fill
     </a>
 
-    <div id="tm-note">
-  ⚠️ Requires <span class="tm-link">Tampermonkey</span>
+  <div id="tm-note">
+  ⚠️ Requires <a href="https://www.tampermonkey.net/" target="_blank" class="tm-link">Tampermonkey</a>
 </div>
   </div>
 
