--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 ║  LICENSE       ▸  MIT                                      ║
 ║  STATUS        ▸  Stable                                   ║
 ║  LAST UPDATE   ▸  2026-01-20                               ║
-║  HOMEPAGE      ▸  https://github.com/Murdervan/movie-id-finder
+║  HOMEPAGE      ▸  https://github.com/Murdervan/movie-id-finder ║
 ╠════════════════════════════════════════════════════════════╣
 ║  DESCRIPTION                                               ║
 ║  Web-based tool to quickly find Movie & TV IDs from        ║
