--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
   </div>
 
   <a
-      href="https://gist.github.com/Murdervan/c01c8a9f47f50caf70d057a2db4ee777.js"
+      href="https://raw.githubusercontent.com/Murdervan/nordicq-movie-id-autofill/main/nordicq-autofill.user.js"
       class="install-btn subtle"
       target="_blank"
     >
