--- a/index.html
+++ b/index.html
@@ -181,10 +181,11 @@ main {
   cursor: pointer;
 }
 
-.autofill-btn {
+.install-btn.subtle.autofill-btn {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   line-height: 1.15;
 }
 
