--- a/index.html
+++ b/index.html
@@ -321,6 +321,17 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
   });
 </script>
 
+<div id="type-filters" style="margin-bottom:12px; text-align:center; gap:10px; display:flex; justify-content:center;">
+  <label style="font-size:14px; color:#fff;">
+    <input type="checkbox" id="chkMovie" checked>
+    Movie
+  </label>
+  <label style="font-size:14px; color:#fff;">
+    <input type="checkbox" id="chkTV" checked>
+    TV Series
+  </label>
+</div>
+  
   <input id="q" placeholder="Search for a movie or TV series">
   <div id="results"></div>
 </main>
