--- a/index.html
+++ b/index.html
@@ -176,20 +176,20 @@ main {
   opacity: 0.85;
 }
 
-.star-like {
-  display: block;
+.star-note {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+
   margin-top: 8px;
-  margin-bottom: 12px;
+  margin-left: 4px;
 
   font-size: 13px;
   color: #fff;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255,255,255,0.2);
-  border-radius: 6px;
+  border-radius: 999px; /* rund og diskret */
   padding: 6px 10px;
-  text-align: center;
-  line-height: 1.3;
-  font-weight: 500;
 
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
   backdrop-filter: blur(6px);
@@ -294,13 +294,9 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
   <div id="results"></div>
 </main>
 
-<div id="tm-note" class="star-like">
+<div id="tm-note" class="star-note">
   ⭐ Enjoying the site?
-  <a
-    href="https://github.com/Murdervan/movie-id-finder"
-    target="_blank"
-    class="tm-link"
-  >
+  <a href="https://github.com/Murdervan/movie-id-finder" target="_blank" class="tm-link">
     Give it a star on GitHub
   </a>
 </div>
