--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ main {
 
   font-size: 13px;
   color: #fff;
+  font-weight: 700;
   background-color: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(255,255,255,0.2);
   border-radius: 999px;
