--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@ main {
 }
 
 .star-note {
-  display: inline-flex;
+  display: block;
   align-items: center;
   gap: 6px;
 
   margin-top: 8px;
   margin-left: 0;
 
-  font-size: 10px;
+  font-size: 11px;
   color: #fff;
   font-weight: 500;
   background-color: rgba(255, 255, 255, 0.1);
@@ -197,6 +197,12 @@ main {
 
   width: fit-content;
   max-width: 420px;
+}
+
+.star-note .github-link {
+  color: #1da1f2;
+  font-weight: 800;
+  text-decoration: none;
 }
 
   
@@ -297,19 +303,16 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
 
   <input id="q" placeholder="Search for a movie or TV series">
 
-<div id="tm-note" class="star-note">
+<div id="github-star" class="star-note">
   ⭐ Enjoying the site?
   <a href="https://github.com/Murdervan/movie-id-finder" target="_blank" class="tm-link">
-    <span style="color:#1da1f2;"><strong>Give it a star on GitHub</strong></span>
+    <span class="github-link"><strong>Give it a star on GitHub</strong></span>
   </a>
 </div>
 
 <div id="results"></div>
 </main>
 
-<script>
-  document.getElementById('tm-note').style.display = 'block';
-</script>
   
 <a
   href="https://github.com/Murdervan/movie-id-finder/issues"
