--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ main {
   box-sizing: border-box;
 }
 
-.title-container { text-align: center; margin-bottom: 30px; }
+.title-container { 
+  text-align: center;
+  margin-bottom: 8px; }
 .title-container h1 {
   font-size: 60px; font-weight: bold; margin: 0;
   background: linear-gradient(90deg, #1da1f2, #f1c40f);
@@ -111,6 +113,7 @@ main {
   font-size: 18px;
   color: #ccc;
   margin-top: 2px;
+  margin-bottom: 0px;
 }
 
 .poster-wrap {
@@ -181,7 +184,7 @@ main {
   align-items: center;
   gap: 6px;
 
-  margin-top: 0px;
+  margin-top: 4px;
   margin-left: 0;
 
   font-size: 11px;
