--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
     <h1>Movie ID Finder</h1>
     <p class="subtitle">
   Quickly find movies & series on
+  ⚠️BEWARE OF https://danishbytes.club/ - FULL OF MALWARE TRACKERS⚠️
   <span style="color:#1da1f2;">TMDb</span>,
   <span style="color:#f1c40f;">IMDb</span>
   & <span style="color:#4caf50;">TheTVDb</span>
