--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ footer a:hover { text-decoration: underline; color: #0d8ddb; }
   z-index: 2147483647;
   max-width: 300px;
 ">
-⚠️ BEWARE OF https://danishbytes.club/ - FULL OF MALWARE TRACKERS ⚠️
+⚠️ BEWARE OF - <strong>DANISHBYTES SITE</strong> - FULL OF MALWARE TRACKERS ⚠️
 </div>
   
 <footer>
