--- a/index.html
+++ b/index.html
@@ -83,13 +83,12 @@
   <span>Open source</span>
 </footer>
 
-<button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
-
-
+  <!-- Warning Box -->
 <div id="warning-btn">
   ⚠️ BEWARE OF - <strong>DANISHBYTES SITE</strong> - FULL OF MALWARE TRACKERS ⚠️
 </div>
 
+<button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
 
 <script src="script.js"></script>
 </body>
