--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="warning-btn">⚠️ BEWARE OF - <strong>DANISHBYTES SITE</strong> - FULL OF MALWARE TRACKERS ⚠️</div>
+<div id="warning-btn">⚠️ BEWARE OF - DANISHBYTES SITE - FULL OF MALWARE TRACKERS ⚠️</div>
 
 <header></header>
 
