--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
-<div id="warning-btn">⚠️ BEWARE OF - DANISHBYTES SITE - FULL OF MALWARE TRACKERS ⚠️</div>
 
+<div id="warning-btn">
+  ⚠️ BEWARE OF - <b>DANISHBYTES SITE</b> - FULL OF MALWARE TRACKERS ⚠️
+</div>
+    
+    
 <header></header>
 
 <main>
