--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
   <input id="q" placeholder="Search for a movie or TV series">
   <div id="results"></div>
+
+  <div class="results-wrap">
+  <div id="results"></div>
+  <button onclick="topFunction()" id="topBtn">↑</button>
+</div>
 </main>
 
 <a href="https://github.com/Murdervan/movie-id-finder/issues" target="_blank" class="feedback-btn" title="Send feedback or report an issue">
@@ -63,8 +68,6 @@
   </a>
   <span>Open source</span>
 </footer>
-
-<button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
 
 <script src="script.js"></script>
 </body>
