--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 
 <!-- Go to Top Button */-->
 <div class="results-wrap">
-  <div id="results"></div>
-  <button onclick="topFunction()" id="topBtn">↑</button>
+  <button id="topBtn">↑</button>
 </div>
 
 <script src="script.js"></script>
